[package]
name = "colorblock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
bincode = "1.3.3"
palette = { version = "0.7.2", features = ["serializing", "approx"] }
serde = { version = "1.0.163", default-features = false, features = ["derive"] }
serde-wasm-bindgen = "0.5.0"
wasm-bindgen = { version = "0.2.74" }

[build-dependencies]
palette = { version = "0.7.2", features = ["serializing"] }
serde = { version = "1.0.163", features = ["derive"] }
bincode = "1.3.3"
image = { version = "0.24.6", default-features = false, features = ["png"] }
